Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1843

Building ATS 3.2.4 on Ubuntu 10.04.4 LTS fails on make due to hwloc.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.4
    • Build
    • None
    • Ubuntu 10.04

    Description

      Building ATS 3.2.4 on Ubuntu 10.04.4 (AMD64) successfully completes ./configure, but on "make" errors out:

      ink_defs.cc: In function 'int ink_number_of_processors()':
      ink_defs.cc:121: error: 'HWLOC_OBJ_PU' was not declared in this scope

      This because HWLOC_OBJ_PU is not present in the hwloc version installed by Ubuntu 10.04.4:

      http://packages.ubuntu.com/lucid/libhwloc-dev

      Workaround is to configure with --disable-hwloc

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jasonjwwilliams Jason J. W. Williams
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: